RESOLVED FIXED108204
[chromium] Fix contents size calculation for page scale initialization
https://bugs.webkit.org/show_bug.cgi?id=108204
Summary [chromium] Fix contents size calculation for page scale initialization
Alexandre Elias
Reported 2013-01-29 10:34:14 PST
[chromium] Fix contents size calculation for page scale initialization
Attachments
Patch (2.50 KB, patch)
2013-01-29 10:39 PST, Alexandre Elias
no flags
Patch (2.50 KB, patch)
2013-01-29 10:52 PST, Alexandre Elias
no flags
Patch (2.50 KB, patch)
2013-01-29 10:55 PST, Alexandre Elias
no flags
Alexandre Elias
Comment 1 2013-01-29 10:39:53 PST
Adrienne Walker
Comment 2 2013-01-29 10:51:34 PST
Comment on attachment 185263 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=185263&action=review R=me. > Source/WebKit/chromium/ChangeLog:8 > + My previous patch http://webk.it/141053 had a few issues that are http://webk.it/107424
Alexandre Elias
Comment 3 2013-01-29 10:52:22 PST
Created attachment 185265 [details] Patch Add semicolon
Alexandre Elias
Comment 4 2013-01-29 10:55:59 PST
Created attachment 185268 [details] Patch Fix Changelog
Alexandre Elias
Comment 5 2013-01-29 11:03:13 PST
Note You need to log in before you can comment on or make changes to this bug.